second hw Gidrevich

--- a/1.2-requests-templates/pagination/stations/templates/stations/index.html
+++ b/1.2-requests-templates/pagination/stations/templates/stations/index.html
@@ -33,9 +33,9 @@
             <tbody>
             {% for station in bus_stations %}
                 <tr>
-                    <td>{{ station.Name }}</td>
-                    <td>{{ station.Street }}</td>
-                    <td>{{ station.District }}</td>
+                    <td>{{ station.0 }}</td>
+                    <td>{{ station.1 }}</td>
+                    <td>{{ station.2 }}</td>
                 </tr>
             {% endfor %}
             </tbody>
