--- a/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
+++ b/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
@@ -6,9 +6,15 @@
 </head>
 <body>
 {% for ingredient, amount in recipe.items %}
-    <p>{{ ingredient }}: {{ amount }}</p>
+    <p>{{ ingredient }}:
+        <script>
+        x={{ amount }}*{{ servings }};
+        document.write(" "+x+" ");
+        </script>
+    </p>
 {% empty %}
     <p>Такого рецепта не знаю :(</p>
 {% endfor %}
+
 </body>
 </html>
